--- a/HTML/Task 4/index.html
+++ b/HTML/Task 4/index.html
@@ -6,8 +6,8 @@
    <body>   
    <nav>
    <ul>
-   <li><a href="">Blog</a></li>
-   <li><a href="">Media</a></li>
+   <li><a href="#blog">Blog</a></li>
+   <li><a href="#media">Media</a></li>
    <li><a href="">About</a></li>
    </nav>
    <header>
